syntax = "proto3";

option java_multiple_files = true;
option java_package = "example.armeria.echo";
option java_outer_classname = "EchoProto";
option objc_class_prefix = "ECHO";

package echo;

service Echo {
  rpc OneToOne(Message) returns (Message) {}
  rpc OneToMany(Message) returns (stream Message) {}
  rpc ManyToOne(stream Message) returns (Message) {}
  rpc ManyToMany(stream Message) returns (stream Message) {}
}

message Message {
  int32 seq = 1;
  string title = 2;
  string content = 3;
}
